//////////////////////////////////////////////////////////////////////////////////////////////
// DO NOT MODIFY THIS FILE                                                                  //
// This file is automatically generated by ZenStack CLI and should not be manually updated. //
//////////////////////////////////////////////////////////////////////////////////////////////

/* eslint-disable */

import { type SchemaType as $Schema } from "./schema.js";
import type { ModelResult as $ModelResult } from "@zenstackhq/orm";
export type QtypeDdimageortext = $ModelResult<$Schema, "QtypeDdimageortext">;
export type QtypeDdimageortextDrags = $ModelResult<$Schema, "QtypeDdimageortextDrags">;
export type QtypeDdimageortextDrops = $ModelResult<$Schema, "QtypeDdimageortextDrops">;
export type QtypeDdmarker = $ModelResult<$Schema, "QtypeDdmarker">;
export type QtypeDdmarkerDrags = $ModelResult<$Schema, "QtypeDdmarkerDrags">;
export type QtypeDdmarkerDrops = $ModelResult<$Schema, "QtypeDdmarkerDrops">;
export type QtypeEssayOptions = $ModelResult<$Schema, "QtypeEssayOptions">;
export type QtypeMatchOptions = $ModelResult<$Schema, "QtypeMatchOptions">;
export type QtypeMatchSubquestions = $ModelResult<$Schema, "QtypeMatchSubquestions">;
export type QtypeMultichoiceOptions = $ModelResult<$Schema, "QtypeMultichoiceOptions">;
export type QtypeRandomsamatchOptions = $ModelResult<$Schema, "QtypeRandomsamatchOptions">;
export type QtypeShortanswerOptions = $ModelResult<$Schema, "QtypeShortanswerOptions">;
export type Question = $ModelResult<$Schema, "Question">;
export type QuestionAnswers = $ModelResult<$Schema, "QuestionAnswers">;
export type QuestionAttemptStepData = $ModelResult<$Schema, "QuestionAttemptStepData">;
export type QuestionAttemptSteps = $ModelResult<$Schema, "QuestionAttemptSteps">;
export type QuestionAttempts = $ModelResult<$Schema, "QuestionAttempts">;
export type QuestionBankEntries = $ModelResult<$Schema, "QuestionBankEntries">;
export type QuestionCalculated = $ModelResult<$Schema, "QuestionCalculated">;
export type QuestionCalculatedOptions = $ModelResult<$Schema, "QuestionCalculatedOptions">;
export type QuestionCategories = $ModelResult<$Schema, "QuestionCategories">;
export type QuestionDatasetDefinitions = $ModelResult<$Schema, "QuestionDatasetDefinitions">;
export type QuestionDatasetItems = $ModelResult<$Schema, "QuestionDatasetItems">;
export type QuestionDatasets = $ModelResult<$Schema, "QuestionDatasets">;
export type QuestionDdwtos = $ModelResult<$Schema, "QuestionDdwtos">;
export type QuestionGapselect = $ModelResult<$Schema, "QuestionGapselect">;
export type QuestionHints = $ModelResult<$Schema, "QuestionHints">;
export type QuestionMultianswer = $ModelResult<$Schema, "QuestionMultianswer">;
export type QuestionNumerical = $ModelResult<$Schema, "QuestionNumerical">;
export type QuestionNumericalOptions = $ModelResult<$Schema, "QuestionNumericalOptions">;
export type QuestionNumericalUnits = $ModelResult<$Schema, "QuestionNumericalUnits">;
export type QuestionReferences = $ModelResult<$Schema, "QuestionReferences">;
export type QuestionResponseAnalysis = $ModelResult<$Schema, "QuestionResponseAnalysis">;
export type QuestionResponseCount = $ModelResult<$Schema, "QuestionResponseCount">;
export type QuestionSetReferences = $ModelResult<$Schema, "QuestionSetReferences">;
export type QuestionStatistics = $ModelResult<$Schema, "QuestionStatistics">;
export type QuestionTruefalse = $ModelResult<$Schema, "QuestionTruefalse">;
export type QuestionUsages = $ModelResult<$Schema, "QuestionUsages">;
export type QuestionVersions = $ModelResult<$Schema, "QuestionVersions">;
export type Quiz = $ModelResult<$Schema, "Quiz">;
export type QuizAttempts = $ModelResult<$Schema, "QuizAttempts">;
export type QuizFeedback = $ModelResult<$Schema, "QuizFeedback">;
export type QuizGrades = $ModelResult<$Schema, "QuizGrades">;
export type QuizOverrides = $ModelResult<$Schema, "QuizOverrides">;
export type QuizOverviewRegrades = $ModelResult<$Schema, "QuizOverviewRegrades">;
export type QuizReports = $ModelResult<$Schema, "QuizReports">;
export type QuizSections = $ModelResult<$Schema, "QuizSections">;
export type QuizSlots = $ModelResult<$Schema, "QuizSlots">;
export type QuizStatistics = $ModelResult<$Schema, "QuizStatistics">;
export type QuizaccessSebQuizsettings = $ModelResult<$Schema, "QuizaccessSebQuizsettings">;
export type QuizaccessSebTemplate = $ModelResult<$Schema, "QuizaccessSebTemplate">;
